fix footer link and alignment

--- a/final/css/city.css
+++ b/final/css/city.css
@@ -147,6 +147,15 @@ footer h2 {
 }
 
 
+footer a {
+    color: white;
+}
+
+#lastUpdated {
+    text-align: center;
+}
+
+
 
 /*Medium Size Viewport */
 
@@ -158,14 +167,8 @@ footer h2 {
             grid-template-columns: 1fr 1fr;
             grid-gap: 1rem;
         }
-        
-
-        footer a {
-            color: white;
-        }
 
         #lastUpdated {
-            text-align: center;
             grid-column: 1/3;
         }
     
