--- a/final/css/directory.css
+++ b/final/css/directory.css
@@ -146,6 +146,14 @@ footer h2 {
     max-width: 1000px;
 }
 
+footer a {
+    color: white;
+}
+
+#lastUpdated {
+    text-align: center;
+}
+
 
 
 /*Medium Size Viewport */
@@ -158,14 +166,8 @@ footer h2 {
             grid-template-columns: 1fr 1fr;
             grid-gap: 1rem;
         }
-        
-
-        footer a {
-            color: white;
-        }
 
         #lastUpdated {
-            text-align: center;
             grid-column: 1/3;
         }
     
