--- a/final/css/join.css
+++ b/final/css/join.css
@@ -146,6 +146,14 @@ footer h2 {
     max-width: 1000px;
 }
 
+footer a {
+    color: white;
+}
+
+#lastUpdated {
+    text-align: center;
+}
+
 
 
 /*Medium Size Viewport */
@@ -159,13 +167,7 @@ footer h2 {
             grid-gap: 1rem;
         }
         
-
-        footer a {
-            color: white;
-        }
-
         #lastUpdated {
-            text-align: center;
             grid-column: 1/3;
         }
     
